ssl-51916/.antlr/instruccionesParser.java
// Generated from c:/Users/Facu/VISUAL STUDIO/ssl-51916/instrucciones.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class instruccionesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VERDADERO=1, FALSO=2, CADENA=3, IF=4, ELSE=5, SALIDA=6, RETURN=7, SEMICOLON=8, 
		LPAR=9, RPAR=10, LKEY=11, RKEY=12, WS=13;
	public static final int
		RULE_instrucciones = 0, RULE_instruccion = 1, RULE_decision = 2, RULE_sentencia = 3, 
		RULE_salida = 4, RULE_terminar = 5, RULE_condicion = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"instrucciones", "instruccion", "decision", "sentencia", "salida", "terminar", 
			"condicion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'1'", "'0'", null, "'if'", "'else'", "'printf'", "'return'", "';'", 
			"'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VERDADERO", "FALSO", "CADENA", "IF", "ELSE", "SALIDA", "RETURN", 
			"SEMICOLON", "LPAR", "RPAR", "LKEY", "RKEY", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "instrucciones.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public instruccionesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	 
		public InstruccionesContext() { }
		public void copyFrom(InstruccionesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SingleInstructionContext extends InstruccionesContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public SingleInstructionContext(InstruccionesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterSingleInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitSingleInstruction(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultipleInstructionsContext extends InstruccionesContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public MultipleInstructionsContext(InstruccionesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterMultipleInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitMultipleInstructions(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		return instrucciones(0);
	}

	private InstruccionesContext instrucciones(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, _parentState);
		InstruccionesContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_instrucciones, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new SingleInstructionContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(15);
			instruccion();
			}
			_ctx.stop = _input.LT(-1);
			setState(21);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MultipleInstructionsContext(new InstruccionesContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_instrucciones);
					setState(17);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(18);
					instruccion();
					}
					} 
				}
				setState(23);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	 
		public InstruccionContext() { }
		public void copyFrom(InstruccionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecisionInstructionContext extends InstruccionContext {
		public DecisionContext decision() {
			return getRuleContext(DecisionContext.class,0);
		}
		public DecisionInstructionContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterDecisionInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitDecisionInstruction(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccion);
		try {
			_localctx = new DecisionInstructionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			decision();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecisionContext extends ParserRuleContext {
		public DecisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decision; }
	 
		public DecisionContext() { }
		public void copyFrom(DecisionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfElseDecisionContext extends DecisionContext {
		public TerminalNode IF() { return getToken(instruccionesParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(instruccionesParser.LPAR, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(instruccionesParser.RPAR, 0); }
		public List<TerminalNode> LKEY() { return getTokens(instruccionesParser.LKEY); }
		public TerminalNode LKEY(int i) {
			return getToken(instruccionesParser.LKEY, i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> RKEY() { return getTokens(instruccionesParser.RKEY); }
		public TerminalNode RKEY(int i) {
			return getToken(instruccionesParser.RKEY, i);
		}
		public TerminalNode ELSE() { return getToken(instruccionesParser.ELSE, 0); }
		public IfElseDecisionContext(DecisionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterIfElseDecision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitIfElseDecision(this);
		}
	}

	public final DecisionContext decision() throws RecognitionException {
		DecisionContext _localctx = new DecisionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decision);
		try {
			_localctx = new IfElseDecisionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(IF);
			setState(27);
			match(LPAR);
			setState(28);
			condicion();
			setState(29);
			match(RPAR);
			setState(30);
			match(LKEY);
			setState(31);
			sentencia();
			setState(32);
			match(RKEY);
			setState(38);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(33);
				match(ELSE);
				setState(34);
				match(LKEY);
				setState(35);
				sentencia();
				setState(36);
				match(RKEY);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	 
		public SentenciaContext() { }
		public void copyFrom(SentenciaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SingleOutputContext extends SentenciaContext {
		public SalidaContext salida() {
			return getRuleContext(SalidaContext.class,0);
		}
		public SingleOutputContext(SentenciaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterSingleOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitSingleOutput(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends SentenciaContext {
		public TerminarContext terminar() {
			return getRuleContext(TerminarContext.class,0);
		}
		public ReturnStatementContext(SentenciaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitReturnStatement(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultipleOutputsContext extends SentenciaContext {
		public SalidaContext salida() {
			return getRuleContext(SalidaContext.class,0);
		}
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public MultipleOutputsContext(SentenciaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterMultipleOutputs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitMultipleOutputs(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentencia);
		try {
			setState(45);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new SingleOutputContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				salida();
				}
				break;
			case 2:
				_localctx = new MultipleOutputsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				salida();
				setState(42);
				sentencia();
				}
				break;
			case 3:
				_localctx = new ReturnStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				terminar();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SalidaContext extends ParserRuleContext {
		public SalidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_salida; }
	 
		public SalidaContext() { }
		public void copyFrom(SalidaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintStringContext extends SalidaContext {
		public TerminalNode SALIDA() { return getToken(instruccionesParser.SALIDA, 0); }
		public TerminalNode LPAR() { return getToken(instruccionesParser.LPAR, 0); }
		public TerminalNode CADENA() { return getToken(instruccionesParser.CADENA, 0); }
		public TerminalNode RPAR() { return getToken(instruccionesParser.RPAR, 0); }
		public TerminalNode SEMICOLON() { return getToken(instruccionesParser.SEMICOLON, 0); }
		public PrintStringContext(SalidaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterPrintString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitPrintString(this);
		}
	}

	public final SalidaContext salida() throws RecognitionException {
		SalidaContext _localctx = new SalidaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_salida);
		try {
			_localctx = new PrintStringContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(SALIDA);
			setState(48);
			match(LPAR);
			setState(49);
			match(CADENA);
			setState(50);
			match(RPAR);
			setState(51);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminarContext extends ParserRuleContext {
		public TerminarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminar; }
	 
		public TerminarContext() { }
		public void copyFrom(TerminarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EndExecutionContext extends TerminarContext {
		public TerminalNode RETURN() { return getToken(instruccionesParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(instruccionesParser.SEMICOLON, 0); }
		public EndExecutionContext(TerminarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterEndExecution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitEndExecution(this);
		}
	}

	public final TerminarContext terminar() throws RecognitionException {
		TerminarContext _localctx = new TerminarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_terminar);
		try {
			_localctx = new EndExecutionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(RETURN);
			setState(54);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionContext extends ParserRuleContext {
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
	 
		public CondicionContext() { }
		public void copyFrom(CondicionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TrueConditionContext extends CondicionContext {
		public TerminalNode VERDADERO() { return getToken(instruccionesParser.VERDADERO, 0); }
		public TrueConditionContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterTrueCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitTrueCondition(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FalseConditionContext extends CondicionContext {
		public TerminalNode FALSO() { return getToken(instruccionesParser.FALSO, 0); }
		public FalseConditionContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).enterFalseCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof instruccionesListener ) ((instruccionesListener)listener).exitFalseCondition(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicion);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VERDADERO:
				_localctx = new TrueConditionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(VERDADERO);
				}
				break;
			case FALSO:
				_localctx = new FalseConditionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(FALSO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 0:
			return instrucciones_sempred((InstruccionesContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean instrucciones_sempred(InstruccionesContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 1);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}